# onenote-to-obsidian

./: .dockerignore  .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  compose.yml  mkdocs.yml  plan.md  pyproject.toml  qa-report.md
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker.yml  docs.yml  lint.yml  publish.yml  test.yml
docs/: changelog.md  configuration.md  contributing.md  faq.md  getting-started.md  index.md  principles.md  usage.md
docs/decisions/: 0001-baseline-state-at-onboarding.md  adr-template.md
docs/domain/onenote-export/: overview.md
docs/stylesheets/: landing.css
onenote_to_obsidian/: __init__.py  __main__.py  auth.py  config.py  exporter.py  graph_client.py  html_converter.py  onenote_api.py  resource_downloader.py  state.py  utils.py
overrides/: home.html
tests/: conftest.py  test_auth.py  test_config.py  test_exporter.py  test_graph_client.py  test_html_converter.py  test_main.py  test_onenote_api.py  test_resource_downloader.py  test_state.py  test_utils.py
