[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "onenote-to-obsidian"
version = "1.1.0"
description = "Export OneNote notebooks to Obsidian-compatible Markdown via Microsoft Graph API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Ivan Kuzmin" },
]
keywords = ["onenote", "obsidian", "markdown", "export", "microsoft-graph"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Utilities",
]
dependencies = [
    "msal>=1.28.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "markdownify>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.0",
    "responses>=0.23.0",
]

[project.scripts]
onenote-to-obsidian = "onenote_to_obsidian.__main__:main"

[project.urls]
Homepage = "https://github.com/Lenivvenil/onenote-to-obsidian"
Repository = "https://github.com/Lenivvenil/onenote-to-obsidian.git"
Issues = "https://github.com/Lenivvenil/onenote-to-obsidian/issues"
Changelog = "https://github.com/Lenivvenil/onenote-to-obsidian/releases"

[tool.setuptools.packages.find]
include = ["onenote_to_obsidian*"]

[tool.setuptools.package-data]
onenote_to_obsidian = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
